--- a/ci/tasks/build.yml
+++ b/ci/tasks/build.yml
@@ -7,5 +7,4 @@ image_resource:
 inputs: 
 - name: go-swagger
 run:
-  path: ls
-  args: ["-la","go-swagger"]
+  path: ./go-swagger/ci/scritps/build.sh
